[package]
name = "financial-rust-roadmap"
version = "0.1.0"
edition = "2024"

[dependencies]
# Essential for precise financial calculations (avoids floating-point errors)
rust_decimal = { version = "1.30", features = ["serde-str"] }
rust_decimal_macros = "1.30"
rand = "0.9.2"

tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
futures = "0.3"
